<resources>
    <string name="app_name">Olosh Player</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forward_playback_duration">Forward Playback Duration:</string>
    <string name="default_forward_playback_time">10</string>
    <string name="backward_playback_duration">Backward Playback Duration:</string>
    <string name="default_backward_playback_time">10</string>
    <string name="no_description" />
    <string name="folder_name">Folder Name</string>
    <string name="default_video_duration">4:69</string>
    <string name="default_file_name">File Name</string>
    <string name="folder_label">Folder</string>
    <string name="video_label">Videos</string>
    <string name="settings_label">Settings</string>
    <string name="my_account">My Account</string>
    <string name="wifi_share">Wifi Share</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="themeCaption">Choose Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="controller_label">Controller Label</string>

    <string name="defaultThemeText">Dark</string>
    <string name="defaultThemeInfo">Current theme: Dark</string>

    <string name="tasniaThemeText">Love</string>
    <string name="tasniaThemeInfo">Current theme: Love</string>

    <string name="rimiThemeText">Noon</string>
    <string name="rimiThemeInfo">Current theme: Noon</string>

    <string name="soulmateThemeText">Sea</string>
    <string name="soulmateThemeInfo">Current theme: Sea</string>

    <string name="inlawsThemeText">Nature</string>
    <string name="inlawsThemeInfo">Current theme: Nature</string>

    <string name="bangladeshThemeText">Bangladesh</string>
    <string name="bangladeshThemeInfo">Current theme: Bangladesh</string>

    <string name="saudiArabiaThemeText">Saudi Arabia</string>
    <string name="saudiArabiaThemeInfo">Current theme: Saudi Arabia</string>

    <string name="japanThemeText">Japan</string>
    <string name="japanThemeInfo">Current theme: Japan</string>

    <string name="button_playlist_text">Open Playlist</string>
    <string name="button_video_snaps_text">View Video Snaps</string>
    <string name="button_video_recorded_clips_text">View Video Recorded Clips</string>
    <string name="button_exit_text">Exit</string>
    <string name="button_send_feedback_text">Send Feedback</string>
    <string name="under_maintenance_text">Feature Under Maintenance</string>
    <string name="about_button_text">About</string>
    <string name="button_update_text">Check for update</string>
    <string name="text_play">Play</string>
    <string name="text_pause">Pause</string>
    <string name="name_zulfikar">Mohammed Julfikar Ali Mahbub</string>
    <string name="name_shahriyar">Md. Shahriyar Hossain Shihab</string>
    <string name="name_ornil">Abu Hasnayen Zillanee</string>
    <string name="name_sohan">Sohanur Rahman Sohan</string>
    <string name="name_afsan">Afsan Saeed</string>
    <string name="name_adnan">Md Adnanul Haq</string>
    <string name="name_sohan_rockStar">Shona Khan</string>
    <string name="role_rockStar">Special Guest</string>
    <string name="role_zulfikar">Co-founder</string>
    <string name="role_shahriyar">Co-founder</string>
    <string name="role_ornil">Intern Developer</string>
    <string name="role_sohan">Quality Assurance Manager</string>
    <string name="role_afsan">Lead Developer</string>
    <string name="role_adnan">Intern Developer</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_build">Build 127</string>
    <string name="capture_label">Snap Current Frame</string>
    <string name="start_clip_record_label">Start Clip Record</string>
    <string name="stop_clip_recording_label">Stop Clip Recording</string>
    <string name="background_playback">Background Playback</string>
    <string name="btn_change_language_text">Change Language</string>
    <string name="title_activity_playlist_chooser">Choose a playlist</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>