<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:actionBarNavMode="list"
    android:background="?colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/themeCaption"
        android:textColor="@color/textPrimary"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/themeButtonOuterLayoutTA"/>

    <LinearLayout
        android:id="@+id/themeButtonOuterLayoutTA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/tasniaThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/tasniaPrimary"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/defaultThemeText"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/rimiThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/rimiPrimary"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/tasniaThemeText"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/soulmateThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/soulmatePrimary"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/rimiThemeText"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/inlawsThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/inlawsPrimary"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/soulmateThemeText"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/aaiThemeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/inlawsThemeText"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="?themeInfo"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>