<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayoutFS"
    tools:context=".SettingsFragment">

    <ScrollView
        android:id="@+id/scrollViewFS"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:textColor="#FF9800"
                    android:text="@string/forward_playback_duration"
                    android:textSize="20sp"
                    android:layout_weight="7" />

                <EditText
                    android:id="@+id/txtForwardPlayback"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:textColor="#FFC107"
                    android:text="@string/default_forward_playback_time"
                    android:layout_weight="2"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:textColor="#FF9800"
                    android:text="@string/backward_playback_duration"
                    android:textSize="20sp"
                    android:layout_weight="7" />

                <EditText
                    android:id="@+id/txtBackwardPlayback"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:textColor="#FFC107"
                    android:text="@string/default_backward_playback_time"
                    android:layout_weight="2"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>